- Added Behat Api tests support - Added all required API tests scenarious
