# routes/api.php
@@ -19,6 +19,8 @@ Route::prefix('v1')->group(function(){
 
     Route::group(['middleware' => 'auth:api'], function(){
         Route::get('auth-user', 'Api\AuthController@getUser');
+        Route::delete('auth-user/delete', 'Api\AuthController@deleteAuthUser');
+        Route::delete('user/delete/{user}', 'Api\AuthController@deleteUser');
     });
 
     Route::apiResource('/products',"Api\ProductController");
